--- a/module1_task0/config.toml
+++ b/module1_task0/config.toml
@@ -1,5 +1,5 @@
-baseURL = ''
-languageCode = 'en-us'
-title = 'Awesome Inc.'
+baseURL = "http://example.org/"
+languageCode = "en-us"
+title = "My New Hugo Site"
 theme = 'ananke'
 publishDir = 'dist'
