--- a/module1_task0/config.toml
+++ b/module1_task0/config.toml
@@ -1,5 +1,5 @@
-baseURL = "http://example.org/"
+baseURL = ""
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Awesome Inc."
 themes = "ananke"
 publishDir = "dist"
