--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -3,3 +3,5 @@ build:
 clean:
 		rm -rf dist/*
 post:
+		hugo new ./content/posts/$(POST_NAME).md
+		sed -i 's/title: .*/title: "$(POST_TITLE)"/' ./content/posts/$(POST_NAME).md
