--- a/module1_task1/config.toml
+++ b/module1_task1/config.toml
@@ -1,5 +1,5 @@
 baseURL = ""
 languageCode = "en-us"
 title = "Awesome Inc."
-themes = "ananke"
-publishDir = "dist"
+theme = 'ananke'
+publishDir = 'dist'
