--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -1,12 +1,12 @@
 name: module3_task0
-run-name: ${{ github.actor }}
+
 on:
   push:
   
   schedule:
     - cron: '0 0 * * *'
 jobs:
-  module3_task0:
+  clone:
     runs-on: ubuntu-latest
     steps:
       - name: cloning
