--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -2,14 +2,16 @@ name: module3_task0
 
 on:
   push:
-  
+    branches:
+      - main
   schedule:
     - cron: '0 0 * * *'
+
 jobs:
-  clone:
+  module3_task0:
     runs-on: ubuntu-latest
     steps:
-      - name: cloning
-        uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v3
       - name: make_help
         run: cd module3_task0 && make help
