--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -17,5 +17,10 @@ jobs:
         run: cd module3_task1 && sudo ./setup.sh
 
       - name: build
-        run: cd module3_task1 && make build
+        run: |
+          cd module3_task1
+          make help
+          make build
+          make POST_NAME=who-are-we POST_TILTE="who are we" post
+          make clean
   
