--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -7,11 +7,11 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  build:
+  module3_task1:
     runs-on: ubuntu-18.04
     steps:
       - name: cloning
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: set_up
         run: cd module3_task1 && sudo ./setup.sh
