--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -2,16 +2,16 @@ name: module3_task1
 
 on:
   push:
-    branches: main
+
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
 
 jobs:
   module3_task1:
     runs-on: ubuntu-18.04
     steps:
       - name: cloning
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: set_up
         run: cd module3_task1 && sudo ./setup.sh
