--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -3,9 +3,10 @@ name: module3_task1
 
 on:
   push:
+    branches: main
 
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
 
 jobs:
   module3_task1:
@@ -13,9 +14,7 @@ jobs:
     steps:
       - name: cloning
         uses: actions/checkout@v3
-
       - name: set_up
         run: cd module3_task1 && sudo ./setup.sh
-
       - name: build
         run: cd module3_task1 && make 
