--- a/.github/workflows/module4_task0.yml
+++ b/.github/workflows/module4_task0.yml
@@ -39,6 +39,7 @@ jobs:
       - name: ejecute makefile
         run: |
           cd module4_task0/
+          make lint
           make help
           make package
           make POST_NAME=who-are-we POST_TILTE="who are we" post
