--- a/module4_task0/Makefile
+++ b/module4_task0/Makefile
@@ -16,9 +16,9 @@ package: ## It should create a file named awesome-website.zip (not committed and
 	hugo
 	zip awesome-website.zip awesome-api dist/
 
-lint: ## should be updated to lint the files README.md and DEPLOY.md with markdownlint command line
-	markdownlint DEPLOY.md
+lint: ## Check markdown files and flag style issues.
 	markdownlint README.md
+	markdownlint DEPLOY.md
 
 unit-tests: ## run unit tests
 	tocuh coverage-units.out
