--- a/module4_task0/Makefile
+++ b/module4_task0/Makefile
@@ -24,7 +24,7 @@ unit-tests: ## run unit tests
 	touch coverage-units.out
 
 integration-tests: ## run integration-tests
-	touch coverage-integration.out
+	touch coverage-integrations.out
 
 validate: ## run validate
 	pwd
