docker-build update

--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -30,5 +30,5 @@ validate: ## run validate
 
 build-docker: ## Create the image in docker
 	cd build
-	docker build -t "awesome:build" . 
+	docker build -t awesome:build . 
 
