--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -29,6 +29,7 @@ validate: ## run validate
 	pwd
 
 build-docker: ## Create the image in docker
+	cd build/
 	pwd
 	docker build -t awesome:build . 
 
