--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -30,5 +30,5 @@ validate: ## run validate
 
 build-docker: ## Create the image in docker
 	pwd
-	docker build -t awesome:build holbertonschool-validation/module4_task1/build/
+	docker build -t awesome:build module4_task1/build/
 
