--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -29,6 +29,5 @@ validate: ## run validate
 	pwd
 
 build-docker: ## Create the image in docker
-	pwd
-	docker build -t awesome:build module4_task1/build/
+	docker build -t awesome:build /home/manurodriguez/holberton/holbertonschool-validation/module4_task1/build
 
