--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -19,12 +19,7 @@ package: ## It should create a file named awesome-website.zip (not committed and
 		zip awesome-website.zip awesome-api dist/
 
 lint: ## Check markdown files and flag style issues.
-		@apt install curl -y
-		@curl --silent --location https://deb.nodesource.com/setup_16.x | bash -
-		@apt install nodejs -y
-		@npm install -g markdownlint-cli 1>&2
-		@markdownlint README.md
-		@markdownlint DEPLOY.md
+		pwd
 
 unit-tests: ## run unit tests
 		touch coverage-units.out
