--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -35,5 +35,10 @@ integration-tests: ## run integration-tests
 validate: ## run validate
 		pwd
 
+.PHONY:
 build-docker: ## Create the image in docker
 		docker build -t awesome:build ./build
+
+.PHONY:
+build-dependencies: ## Install dependencis of hugo
+		@sudo apt install ./hugo.deb
