--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -23,9 +23,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: install hugo
-        run: |
-          cd module4_task1/
-          sudo apt install ./hugo.deb
+        run:  make -C module4_task1 build-dependencies
 
       - name: install markdownlint
         run: npm install -g markdownlint-cli
