--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -23,9 +23,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: install hugo
-        run:  |
-          cd module4_task1
-          make build-dependencies
+        run: |
+          cd module4_task1/
+          sudo ./setup.sh
 
       - name: install markdownlint
         run: npm install -g markdownlint-cli
