--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -1,7 +1,7 @@
 .PHONY: build
 build: ## Created a new site
-		@hugo
-		@touch awesome-api
+		hugo
+		touch awesome-api
 
 clean: ## Delete all files dist
 		rm -rf dist/*
