--- a/.github/workflows/module4_task2.yml
+++ b/.github/workflows/module4_task2.yml
@@ -78,3 +78,7 @@ jobs:
           cd module4_task2
           make build-docker
 
+      - name: docker-tests
+        run: |
+          cd module4_task2
+          make docker-tests
