Created a web and check his function

--- a/module2_task0/Makefile
+++ b/module2_task0/Makefile
@@ -1,17 +1,21 @@
 build: ## Compile the source code of the application
+		go mod init github.com/ManuRodriguezC/awesome-api
 		go build
 
 run: ## un the application in background by executing
-		chmod u+x awesome-api
-		./awesome-api
 		./awesome-api >./awesome.log 2>&1 &
 
 stop: ## Stop the application
-		kill XXXXX or XXXXX
-		kill "$(pgrep awesome-api)"
+		kill $(shell pgrep awesome-api)
 
 clean: ## Delete the binaty awesome-api
-		rm awesome-api.log
+		make shop
+		rm -r awesome-api.log
 		rmdir awesome-api
 
-test: ##
+test: ## Test the application
+		curl http://localhost:9999
+		curl http://localhost:9999/health
+
+help: ## Print the differents commands
+		cat Makefile | grep '##' | tr -d '##' | head -n -1
