Created a web and check his function

--- a/module2_task0/Makefile
+++ b/module2_task0/Makefile
@@ -9,7 +9,7 @@ stop: ## Stop the application
 		kill $(shell pgrep awesome-api)
 
 clean: ## Delete the binaty awesome-api
-		make shop
+		make stop
 		rm -r awesome-api.log
 		rmdir awesome-api
 
