--- a/module2_task1/Makefile
+++ b/module2_task1/Makefile
@@ -1,6 +1,5 @@
 build: ## Compile the source code of the application
-		go mod init github.com/ManuRodriguezC/awesome-api
-		go build
+		make lint && go build|| exit -1
 
 run: ## un the application in background by executing
 		./awesome-api >./awesome.log 2>&1 &
@@ -9,9 +8,10 @@ stop: ## Stop the application
 		kill $(shell pgrep awesome-api)
 
 clean: ## Delete the binaty awesome-api
-		make stop
 		rm -r awesome.log
 		rm -r awesome-api
+		rm go.mod
+		rm go.sum
 
 test: ## Test the application
 		curl http://localhost:9999
