--- a/module2_task1/Makefile
+++ b/module2_task1/Makefile
@@ -6,11 +6,13 @@ run: ## un the application in background by executing
 		./awesome-api >./awesome.log 2>&1 &
 
 stop: ## Stop the application
-		kill $(shell pgrep awesome-api)
+		kill $(shell pgrep awesome-api) 2>&1 &
 
 clean: ## Delete the binaty awesome-api
-		rm go.mod
-		rm go.sum
+		rm -r awesome.log 2>&1 &
+		rm -r awesome-api 2>&1 &
+		rm go.mod 2>&1 &
+		rm go.sum 2>&1 &
 
 test: ## Test the application
 		curl http://localhost:9999
