--- a/module2_task1/Makefile
+++ b/module2_task1/Makefile
@@ -1,6 +1,6 @@
 build: ## Compile the source code of the application
-		go mod init github.com/ManuRodriguezC/awesome-api
-		make lint && go build || exit -1
+		make lint
+		go build
 
 run: ## un the application in background by executing
 		./awesome-api >./awesome.log 2>&1 &
@@ -9,10 +9,10 @@ stop: ## Stop the application
 		kill $(shell pgrep awesome-api) 2>&1 &
 
 clean: ## Delete the binaty awesome-api
-		rm -r awesome.log 2>&1 &
-		rm -r awesome-api 2>&1 &
-		rm go.mod 2>&1 &
-		rm go.sum 2>&1 &
+		-rm -r awesome.log
+		-rm -r awesome-api
+		-rm go.mod
+		-rm go.sum
 
 test: ## Test the application
 		curl http://localhost:9999
