--- a/module1_task0/config.toml
+++ b/module1_task0/config.toml
@@ -1,5 +1,5 @@
 baseURL = ""
-languageCode = "en-us"
-title = "Awesome Inc."
+languageCode = 'en-us'
+title = 'Awesome Inc.'
 theme = 'ananke'
 publishdir = 'dist'
