--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -1,9 +1,9 @@
-build:
-	hugo
+clean: ## Delete dist file
+		rm -r dist
 
-clean:
-	rm -rf dist/*
+build: ## Create a new web site
+		hugo
 
-post:
-	hugo new ./content/posts/$(POST_NAME).md
-	sed -i 's/title: .*/title: "$(POST_TITLE)"/' ./content/posts/$(POST_NAME).md
+post: ## Create a new post whose filename and title
+		hugo new ./content/posts/$(POST_NAME).md
+		sed -i 's/title: .*/title: "$(POST_TITLE)"/' ./content/posts/$(POST_NAME).md
