--- a/module2_task3/Makefile
+++ b/module2_task3/Makefile
@@ -15,10 +15,6 @@ clean: ## Delete the binaty awesome-api
 		-rm go.mod 2>&1 &
 		-rm go.sum 2>&1 &
 
-test: ## Test the application
-		curl http://localhost:9999
-		curl http://localhost:9999/health
-
 lint: ## Implemented and should fail when the linter catches and error
 		golangci-lint run
 
@@ -29,8 +25,7 @@ integration-tests: ## Test using integration in go tests
 		go test -v -coverprofile=coverage-integrations.out
 
 test: ## Run unit test and integration test
-		make unit-tests
-		make integration-tests
+		make unit-tests & make integration-tests
 
 help: ## Print the differents commands
 		cat Makefile | grep '##' | tr -d '##' | head -n -1
