--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -13,6 +13,7 @@ check: ## Check web static
 	markdown-lint-check ./content/posts/*.md
 
 validate: ## Should validate the file ./dist/index.html
+	make build
 	./w3c_validator.py ./dist/index.html
 
 lint: ## Lint markdown
