Created task 5, and unit 3 and 4 tasks

--- a/module2_task5/Makefile
+++ b/module2_task5/Makefile
@@ -5,7 +5,7 @@ clean: ## Delete all files dist and API
 		-rm coverage-integrations.out
 		-rm coverage-units.out
 
-build: # Created web and API
+build: ## Created web and API
 		make build-go
 		make build-hugo
 
