--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -1,26 +1,22 @@
----
-env:
-  GH_TOKEN: ${{ github.token }}
-
 name: release_drafter
+
 on:
   push:
-    tags: "1.0.1"
     branches:
       - main
   pull_request:
     types: [opened, reopened, synchronize]
-    branches:
-      - main
+
+permissions:
+  contents: read
 
 jobs:
-  release_draf:
-    permissions: write-all
-    name: release_drafter
+  update_release_draft:
+    permissions:
+      contents: write
+      pull-requests: write
     runs-on: ubuntu-18.04
-
     steps:
-      - name: release drafter
-        uses: release-drafter/release-drafter@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
