Task 2, Created the images in container

--- a/module4_task2/Makefile
+++ b/module4_task2/Makefile
@@ -1,5 +1,30 @@
+.PHONY: build
+
+go-build: ## Build the API binary
+		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build /bin/bash -c "go mod init github.com/ManuRodriguezC/awesome-api && go get github.com/gorilla/mux && go build"
+
+hugo-build: ## Build a web site
+		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build hugo
+
 build:  ## Create  a new site
-		hugo
+		-make go-build
+		make hugo-build
+
+check: ## Lints and check the lint of markdown
+		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build markdownlint ./content/posts/*.md
+		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build markdown-link-check ./content/posts/*.md
+
+validate: ## Validates dist/index.html using W3C Hbtn validator
+		-make build
+		-git clone https://github.com/holbertonschool/W3C-Validator.git
+		-./W3C-Validator/w3c_validator.py ./dist/index.html
+		-rm -rf ./W3C-Validator
+
+run:	## Runs the built binary and send everything to awesome.log
+		./awesome-api >./awesome.log 2>&1 &
+
+stop:	## Terminates the execution of awesome-api
+		kill $(shell pgrep awesome-api)
 
 clean: ## Delete all files dist
 		rm -rf dist/*
@@ -8,27 +33,30 @@ post: ## Created a new post and update a title of the content
 		hugo new ./content/posts/$(POST_NAME).md
 		sed -i 's/title: .*/title: "$(POST_TITLE)"/' ./content/posts/$(POST_NAME).md
 
+help: ## Print all commands of the makefile
+		cat Makefile | grep '##' | tr -d '##' | head -n -1
+
 package: ## It should create a file named awesome-website.zip (not committed and deleted by make clean).
-		hugo
+		-make build
 		zip awesome-website.zip awesome-api dist/
 
 lint: ## Check markdown files and flag style issues.
-		hadolint build/Dockerfile
-
-unit-tests: ## run unit tests
-		touch coverage-units.out
-
-integration-tests: ## run integration-tests
-		touch coverage-integrations.out
-
-validate: ## run validate
 		pwd
 
+unit-tests: ## run unit tests
+		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build go test -v -short -coverprofile=coverage-units.out
+
+integration-tests: ## run integration-tests
+		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build go test -v -coverprofile=coverage-integrations.out
+
+test: ## Tests API uses go test
+		-make build
+		make unit-tests
+		make integration-tests
+
 build-docker: ## Create the image in docker
-		docker build -t awesome:build -f build/Dockerfile .
+		docker build -t awesome:build ./build
 
-docker-tests: ## Container-structure-test
-		curl -LO https://storage.googleapis.com/container-structure-test/latest/container-structure-test-linux-amd64 && chmod +x container-structure-test-linux-amd64 && mkdir -p $HOME/bin && export PATH=$PATH:$HOME/bin && mv container-structure-test-linux-amd64 $HOME/bin/container-structure-test
-
-help: ## Print all commands of the makefile
-		cat Makefile | grep '##' | tr -d '##' | head -n -1
+docker-tests: ## Test the henereted docker image using container
+		-make build-docker
+		container-structure-test test --image awesome:build --config build/cst.yml
