Task 2, Created the images in container

--- a/module4_task2/Makefile
+++ b/module4_task2/Makefile
@@ -1,64 +1,65 @@
 .PHONY: build
 
-go-build: ## Build the API binary
-		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build /bin/bash -c "go mod init github.com/ManuRodriguezC/awesome-api && go get github.com/gorilla/mux && go build"
+go-build:	## Builds the API binary file using go
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build /bin/bash -c "go mod init github.com/ManuRodriguezC/awesome-api && go get github.com/gorilla/mux && go build"
 
-hugo-build: ## Build a web site
-		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build hugo
+hugo-build:		## Builds a website using gohugo on the dist folder
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build hugo
 
-build:  ## Create  a new site
-		-make go-build
-		make hugo-build
+build:	## Builds all that is needed for website
+	-make go-build
+	make hugo-build
 
-check: ## Lints and check the lint of markdown
-		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build markdownlint ./content/posts/*.md
-		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build markdown-link-check ./content/posts/*.md
+post:		## Create a new blog post whose filename and title come from the environment variables POST_TITLE and POST_NAME
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build hugo new posts/${POST_NAME}.md
+	sed -i "s/title: .*/title: ${POST_TITLE}/" ./content/posts/${POST_NAME}.md
+
+check:  ## Lints and check for dead links on markdowns using markdownlint-cli and markdown-link-check
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build markdownlint ./content/posts/*.md
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build markdown-link-check ./content/posts/*.md
 
 validate: ## Validates dist/index.html using W3C Hbtn validator
-		-make build
-		-git clone https://github.com/holbertonschool/W3C-Validator.git
-		-./W3C-Validator/w3c_validator.py ./dist/index.html
-		-rm -rf ./W3C-Validator
+	-make build
+	-git clone https://github.com/holbertonschool/W3C-Validator.git
+	-./W3C-Validator/w3c_validator.py ./dist/index.html
+	-rm -rf ./W3C-Validator
 
 run:	## Runs the built binary and send everything to awesome.log
-		./awesome-api >./awesome.log 2>&1 &
+	./awesome-api >./awesome.log 2>&1 &
 
 stop:	## Terminates the execution of awesome-api
-		kill $(shell pgrep awesome-api)
+	kill $(shell pgrep awesome-api)
 
-clean: ## Delete all files dist
-		rm -rf dist/*
+clean:	## Removes binary and logs
+	-make stop
+	-rm -rf awesome-api awesome.log coverage* go* awesome-website.zip ./dist
 
-post: ## Created a new post and update a title of the content
-		hugo new ./content/posts/$(POST_NAME).md
-		sed -i 's/title: .*/title: "$(POST_TITLE)"/' ./content/posts/$(POST_NAME).md
+test:	## Tests API using go test
+	-make build
+	make unit-tests
+	make integration-tests
 
-package: ## It should create a file named awesome-website.zip (not committed and deleted by make clean).
-		-make build
-		zip awesome-website.zip awesome-api dist/
+lint:	## Lints all the go files using golangci-lint
+	-make build-docker
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build markdownlint README.md DEPLOY.md
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app hadolint/hadolint hadolint build/Dockerfile
 
-lint: ## Check markdown files and flag style issues.
-		-make build-docker
-		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build markdownlint README.md DEPLOY.md
-		docker run --rm --volume=$(shell pwd):/app --workdir=/app hadolint/hadolint hadolint build/Dockerfile
+unit-tests:	## Runs implemented unit test using go test
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build go test -v -short -coverprofile=coverage-units.out
 
-unit-tests: ## run unit tests
-		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build go test -v -short -coverprofile=coverage-units.out
+integration-tests:	## Runs integration test using go test
+	docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build go test -v -coverprofile=coverage-integrations.out
 
-integration-tests: ## run integration-tests
-		docker run --rm --volume=$(shell pwd):/app --workdir=/app awesome:build go test -v -coverprofile=coverage-integrations.out
+package:  ## Generates a zip archive to deployment
+	-make build
+	zip awesome-website.zip awesome-api dist/
 
-test: ## Tests API uses go test
-		-make build
-		make unit-tests
-		make integration-tests
+build-docker:	## Builds a Docker image from Dockerfile on build directory
+	docker build -t awesome:build ./build
 
-build-docker: ## Create the image in docker
-		docker build -t awesome:build ./build
+docker-tests:	## Test the generated docker image using container-structure-test and cst.yml config file
+	-make build-docker
+	container-structure-test test --image awesome:build --config build/cst.yml
 
-docker-tests: ## Test the henereted docker image using container
-		-make build-docker
-		container-structure-test test --image awesome:build --config build/cst.yml
-
-help: ## Print all commands of the makefile
-		cat Makefile | grep '##' | tr -d '##' | head -n -1
+help:	## Show this help message
+	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
